Finished coding and README file.
