# src/main/java/com/gnaderi/interview/cro/controller/CompanyRegOfficeController.java
@@ -2,6 +2,7 @@ package com.gnaderi.interview.cro.controller;
 
 import com.gnaderi.interview.cro.entity.Company;
 import com.gnaderi.interview.cro.entity.Stakeholder;
+import com.gnaderi.interview.cro.inbound.BnfOwnerRegReq;
 import com.gnaderi.interview.cro.inbound.CompanyRegistrationRequest;
 import com.gnaderi.interview.cro.outbound.CompanyDto;
 import com.gnaderi.interview.cro.service.CroService;
@@ -9,6 +10,7 @@ import com.gnaderi.interview.cro.util.DtoConverter;
 import com.gnaderi.interview.cro.util.RequestValidator;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
+import io.swagger.annotations.ApiParam;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -26,7 +28,6 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Api(value = "Company Registrations Office REST API Interface", tags = "Company Registrations Office REST API Interface", description = "Company Registrations Office REST API Interface")
-@PropertySource(value = "classpath:application.properties")
 @RestController
 @RequestMapping(value = "/cro")
 public class CompanyRegOfficeController {
@@ -42,24 +43,30 @@ public class CompanyRegOfficeController {
     @Autowired
     private DtoConverter dtoConverter;
 
-    @ApiOperation(value = "Get a list of all companies stored in application.", notes = "Retrieve all companies details.", produces = MediaType.APPLICATION_JSON_UTF8_VALUE, response = CompanyDto.class, responseContainer = "List", httpMethod = "GET")
+    @ApiOperation(value = "Get/search a list of all companies stored in application.",
+            notes = "Retrieve all companies details.", produces = MediaType.APPLICATION_JSON_UTF8_VALUE,
+            response = CompanyDto.class, responseContainer = "List", httpMethod = "GET")
     @PreAuthorize("hasAuthority('ADMIN_USER') or hasAuthority('STANDARD_USER')")
     @RequestMapping(value = "/companies", method = RequestMethod.GET)
     public @ResponseBody
-    ResponseEntity searchCompanies(@RequestParam(value = "name", required = false) String name, @RequestParam(value = "id", required = false) Integer id) {
+    ResponseEntity searchCompanies(@ApiParam(value = "name of the company", name = "CompanyName") @RequestParam(value = "name", required = false) String name,
+                                   @ApiParam(value = "searching for a company by id") @RequestParam(value = "id", required = false) Integer id,
+                                   @ApiParam(value = "Show companies with all stakeholders details.", name = "showall") @RequestParam(value = "showall", required = false) boolean showall) {
         try {
             List<Company> foundCompanies = new ArrayList<>();
             if (StringUtils.isBlank(name) && id == null) {
                 LOGGER.info("Incoming request for all companies:");
                 foundCompanies.addAll(service.findAllCompanies());
             } else if (id != null) {
-                LOGGER.info("Incoming request for get details of company Id#{}",id);
+                LOGGER.info("Incoming request for get details of company Id#{}", id);
                 foundCompanies.add(service.findCompanyById(id));
             } else {
-                LOGGER.info("Incoming request for get details of company name#{}",name);
+                LOGGER.info("Incoming request for get details of company name#{}", name);
                 foundCompanies.addAll(service.findCompanyByName(name));
             }
-            final List<CompanyDto> companies = foundCompanies.stream().map(e -> dtoConverter.convertAndAttachStakeholders(e)).collect(Collectors.toList());
+            final List<CompanyDto> companies = foundCompanies.stream().map(com -> showall ?
+                    dtoConverter.convertAndAttachStakeholders(com) : dtoConverter.convert(com))
+                    .collect(Collectors.toList());
 
             LOGGER.info("List of the companies:{}", companies);
             return new ResponseEntity<>(companies, HttpStatus.OK);
@@ -82,16 +89,37 @@ public class CompanyRegOfficeController {
         try {
             requestValidator.validateRequest(request);
             Company company = service.registerCompany(request.getName(), request.getAddress(), request.getCity(), request.getCountry(), request.getEmail(), request.getPhoneNumber());
-            company.setStakeholders(request.getStakeholders().stream().map(e -> {
-                Stakeholder stakeholderById = service.findStakeholderById(e);
-                service.registerBeneficialOwner(company, stakeholderById);
-                return stakeholderById;
-            }).collect(Collectors.toList()));
-            CompanyDto companyDto = dtoConverter.convert(company);
+            request.getStakeholders().forEach(sId -> service.registerBeneficialOwner(company, service.findStakeholderById(sId)));
+            Company updatedCompany = service.findCompanyById(company.getId());
+            CompanyDto companyDto = request.getStakeholders().isEmpty() ?
+                    dtoConverter.convert(updatedCompany) : dtoConverter.convertAndAttachStakeholders(updatedCompany);
             LOGGER.info("Registered Company info at CRO:{}", companyDto);
             return new ResponseEntity<>(companyDto, HttpStatus.CREATED);
 
 
+        } catch (Exception ex) {
+            return new ResponseEntity<>("Unable to finish company registration operation:" + ex.getMessage(), HttpStatus.BAD_REQUEST);
+        }
+
+    }
+
+    @ApiOperation(value = "Receive a company Id and a list of stakeholders Id's as a request to be registered as beneficial owner of the company.",
+            notes = "Receive a company Id and a list of stakeholders Id's as a request to be registered as beneficial owner of the company.",
+            produces = MediaType.APPLICATION_JSON_UTF8_VALUE, response = CompanyDto.class, responseContainer = "String", httpMethod = "POST")
+    @PreAuthorize("hasAuthority('ADMIN_USER')")
+    @RequestMapping(value = "/owners", method = RequestMethod.POST)
+    public @ResponseBody
+    ResponseEntity registerBeneficialOwner(@RequestBody BnfOwnerRegReq req) {
+        LOGGER.info("Incoming request to register a list of beneficial owners#[{}] for  Company Id#{}.", req.getCompanyId(), req.getStakeholders().toString());
+        try {
+            requestValidator.validateRequest(req);
+            Company company = service.findCompanyById(req.getCompanyId());
+
+            req.getStakeholders().forEach(sId -> service.registerBeneficialOwner(company, service.findStakeholderById(sId)));
+            Company updatedCompany = service.findCompanyById(req.getCompanyId());
+            CompanyDto companyDto = dtoConverter.convertAndAttachStakeholders(updatedCompany);
+            LOGGER.info("Registered Company info at CRO:{}", companyDto);
+            return new ResponseEntity<>(companyDto, HttpStatus.CREATED);
         } catch (Exception ex) {
             return new ResponseEntity<>("Unable to finish company registration operation:" + ex.getMessage(), HttpStatus.BAD_REQUEST);
         }
@@ -146,5 +174,4 @@ public class CompanyRegOfficeController {
             return new ResponseEntity<>("Unable to finish searching for a company operation:" + ex.getMessage(), HttpStatus.BAD_REQUEST);
         }
     }
-    //TODO add beneficial owner to the companies
 }
